// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiLink accent is rendered 1`] = `
<button
  class="euiLink euiLink--accent"
  type="button"
/>
`;

exports[`EuiLink button respects the type property 1`] = `
<button
  class="euiLink euiLink--primary"
  type="submit"
/>
`;

exports[`EuiLink danger is rendered 1`] = `
<button
  class="euiLink euiLink--danger"
  type="button"
/>
`;

exports[`EuiLink ghost is rendered 1`] = `
<button
  class="euiLink euiLink--ghost"
  type="button"
/>
`;

exports[`EuiLink if href is not specified, it renders a button of type=button 1`] = `
<button
  class="euiLink euiLink--primary"
  type="button"
/>
`;

exports[`EuiLink it is an external link 1`] = `
<a
  class="euiLink euiLink--primary"
  href="/baz/bing"
  rel="noreferrer"
>
  <svg
    aria-label="External link"
    class="euiIcon euiIcon--small euiIcon-isLoading euiLink__externalIcon"
    focusable="false"
    height="16"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  />
</a>
`;

exports[`EuiLink it passes the default props through 1`] = `
<button
  aria-label="aria-label"
  class="euiLink euiLink--primary testClass1 testClass2"
  data-test-subj="test subject string"
  type="button"
/>
`;

exports[`EuiLink it supports both href and onClick 1`] = `
<a
  class="euiLink euiLink--primary"
  href="/imalink"
  rel="noreferrer"
/>
`;

exports[`EuiLink primary is rendered 1`] = `
<button
  class="euiLink euiLink--primary"
  type="button"
/>
`;

exports[`EuiLink secondary is rendered 1`] = `
<button
  class="euiLink euiLink--secondary"
  type="button"
/>
`;

exports[`EuiLink subdued is rendered 1`] = `
<button
  class="euiLink euiLink--subdued"
  type="button"
/>
`;

exports[`EuiLink supports children 1`] = `
<a
  class="euiLink euiLink--primary"
  href="#"
  rel="noreferrer"
>
  <span>
    Hiya!!!
  </span>
</a>
`;

exports[`EuiLink supports href 1`] = `
<a
  class="euiLink euiLink--primary"
  href="/baz/bing"
  rel="noreferrer"
/>
`;

exports[`EuiLink supports rel 1`] = `
<a
  class="euiLink euiLink--primary"
  href="hoi"
  rel="noreferrer stylesheet"
/>
`;

exports[`EuiLink supports target 1`] = `
<a
  class="euiLink euiLink--primary"
  href="#"
  rel="noreferrer"
  target="_parent"
/>
`;

exports[`EuiLink text is rendered 1`] = `
<button
  class="euiLink euiLink--text"
  type="button"
/>
`;

exports[`EuiLink warning is rendered 1`] = `
<button
  class="euiLink euiLink--warning"
  type="button"
/>
`;
